# libsxg

./: .clang-format  .gitignore  .markdownlint  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build_all_debs  build_deb
.github/workflows/: ccpp.yml  clang-format-validation.yml  formatter.yml  make-debs.yml  release-action.yml
.travis/: install_boringssl.sh  install_cmake_old.sh  install_go.sh
debian/: changelog  control  libsxg-dev.install  libsxg-dev.manpages  libsxg0.2.install  libsxg0.2.symbols  libsxg0.symbols  rules  sxg-util.install  sxg-util.manpages  watch
dockerfiles/: deb.dockerfile
docs/: OVERVIEW.md  gencertchain.1  gencertchain.md  gensxg.1  gensxg.md  index.md  internals.md  libsxg.3  libsxg.md  sxg_buffer.md  sxg_encoded_response.md  sxg_generate.md  sxg_header.md  sxg_raw_response.md  sxg_signer_list.md
fuzzers/: signer_fuzzer.cc
include/: libsxg.h  libsxg.h.in  libsxg.hpp
include/libsxg/: sxg_buffer.h  sxg_cert_chain.h  sxg_encoded_response.hpp  sxg_generate.h  sxg_generate.hpp  sxg_header.h  sxg_header.hpp  sxg_raw_response.h  sxg_raw_response.hpp  sxg_signer_list.h  sxg_signer_list.hpp
include/libsxg/internal/: sxg_buffer.h  sxg_cbor.h  sxg_cert_chain.h  sxg_codec.h  sxg_header.h  sxg_sig.h
packaging/: Dockerfile  build_all_debs  build_deb  upload_binary
packaging/debian/: README.Debian  changelog  control  copyright  libsxg0.1.symbols  libsxg0.2.symbols  prerm.ex  rules  sxg-util.manpages
src/: gencertchain.c  gensxg.c  gensxg.cc  sxg_buffer.c  sxg_buffer_debug.c  sxg_cbor.c  sxg_cert_chain.c  sxg_codec.c  sxg_encoded_response.c  sxg_encoded_response.cc  sxg_generate.c  sxg_generate.cc  sxg_header.c  sxg_header.cc  sxg_raw_response.c  sxg_sig.c  sxg_signer_list.c  sxg_signer_list.cc  verifysignature.c
src/ruby/: .rake_tasks~  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  Rakefile  sxg.gemspec
src/ruby/ext/sxg/: extconf.rb  sxg.c
src/ruby/include/libsxg/: sxg_cbor.h  sxg_cert_chain.h  sxg_encoded_response.h  sxg_signer_list.h  sxg_status.h
src/ruby/include/libsxg/internal/: sxg_buffer.h  sxg_cert_chain.h
src/ruby/lib/: sxg.rb
src/ruby/lib/sxg/: encode.rb  version.rb
src/ruby/test/: sxg_test.rb  test_helper.rb
tests/: nfail_malloc_test.cc  sxg_buffer_test.cc  sxg_cbor_test.cc  sxg_cert_chain_test.cc  sxg_codec_test.cc  sxg_encoded_response_test.cc  sxg_generate_test.cc  sxg_header_test.cc  sxg_sig_test.cc  sxg_signer_list_test.cc  test_util.cc  test_util.h  toplevel_test.cc
tests/cpp/: sxg_encoded_response_test.cc  sxg_generate_test.cc  sxg_header_test.cc  sxg_signer_list_test.cc
tests/testdata/: cert256.pem  cert384.pem  ed25519.key  ed25519.pubkey  priv256.key  priv384.key
